correction + new graph + data cleaning

--- a/Project-12.qmd
+++ b/Project-12.qmd
@@ -214,9 +214,9 @@ PressFreedomRank <- PressFreedom |> filter(Indicator == "Press Freedom Rank")
 ```
 
 ```{r}
-PressFreedomIndex <- PressFreedomIndex |>
+PressFreedomIndex <- PressFreedomIndex |> 
   pivot_longer(!(Indicator | Country | LOCATION)) |>
-  rename("Time" = "name", "Press Freedom Index" = "value") |>
+  rename("Time" = "name", "Press Freedom Index" = "value") |> filter(`Press Freedom Index` >= 0 & `Press Freedom Index` <= 100) |>
   mutate(Time = ifelse(is.na(Time), NA, as.numeric(Time))) |> filter(Time >= 2005 & Time <= 2021)
 ```
 
@@ -449,44 +449,15 @@ data_inter |> filter(GROUP != 2) |> ggplot(aes(fill=as.factor(GROUP), y=exp_rate
 
 ```{r}
 enrol_exp <- inner_join(enrolment, expenditure_rate, by=c("Country", "Time")) |> mutate("Value"= Value/100) |> rename("enrolment"= "Value")
-```
-```{r}
+
 lm(enrolment ~ exp_rate + as.factor(Time), data = enrol_exp) |> summary()
 ```
-## illiteracy vs. enrolment
-```{r}
-illiteracy_enrol <- inner_join(illiterate_rate, enrolment, by=c("Time", "Country"))
-```
-```{r}
-library(scatterplot3d)
-library(RColorBrewer)
-color_palette <- c("#999999", "#E69F00", "#56B4E9")
 
-s3d <- scatterplot3d(x = illiteracy_enrol$Time, y = illiteracy_enrol$illiterate_rate, z = illiteracy_enrol$Value, 
-              color = color_palette[as.numeric(illiteracy_enrol$GROUP)], pch = 16, angle = 130,
-              xlab = "Time", ylab = "Illiterate rate", zlab = "Enrollment",
-              main = "3D Scatter Plot with Time, Illiterate rate, and Enrollment")
 
-legend(c(7, 12, 30), legend = levels(illiteracy_enrol$GROUP),
-       col = c("#999999", "#E69F00", "#56B4E9"), pch = 16, title = "GROUP")
-```
+
+## Illiteracy vs enrolement 
 ```{r}
-scatterplot3d(x = illiteracy_enrol$Time, y = illiteracy_enrol$illiterate_rate, z = illiteracy_enrol$Value, color = color_palette[as.factor(illiteracy_enrol$GROUP)], pch = 16, angle = 130, xlab = "Time", ylab = "Illiteracy rate", zlab = "Value", main = "3D Scatter Plot with Time, Illiteracy rate, and Value")
-
-legend("topright", legend = levels(illiteracy_enrol$GROUP), col = color_palette, pch = 16, title = "GROUP")
-```
-```{r}
-color_palette <- brewer.pal(5, "Set3")
-
-scatterplot3d(x = illiteracy_enrol$Time, y = illiteracy_enrol$illiterate_rate, z = illiteracy_enrol$Value, 
-              color = color_palette[as.numeric(illiteracy_enrol$GROUP)], pch = 16, angle = 130,
-              xlab = "Time", ylab = "Illiterate rate ", zlab = "Enrolement ",
-              main = "3D Scatter Plot with Time, Illiterate rate, and Enrolement")
-legend("topright", legend = levels(illiteracy_enrol$GROUP), col = color_palette, pch = 16, title = "GROUP")
-```
-
-```{r}
-illiteracy_enrol |> filter(Time!=2021, !is.na(GROUP)) |> ggplot(aes(x = Value, y = illiterate_rate, label = Country)) + geom_point(alpha = .6) + facet_wrap(~GROUP) + xlab("enrolment percentage") + ylab("illiterate percentage") + ggtitle("impact of enrolment on illiteracy per group")
+illiteracy_enrol |> filter(Time!=2021, !is.na(GROUP)) |> ggplot(aes(x = Value, y = illiterate_rate, label = Country)) + geom_point(alpha = .3) + facet_wrap(~GROUP) + xlab("enrolment percentage") + ylab("illiterate percentage") + ggtitle("impact of enrolment on illiteracy per group")
 ```
 
 ## illiteracy vs electricity vs rural
@@ -495,10 +466,40 @@ rural <- rural |> rename("rural_per"="Value")
 electricity <- electricity |> rename("electricity_per"="Value")
 GDP_capita <- GDP_capita |> rename("GDP per capita"="Value")
 ```
+
+
 ```{r}
 inner_join(illiterate_rate, electricity, by = c("Time", "Country")) |>  inner_join(rural, by = c("Time", "Country")) |> inner_join(GDP_capita, by = c("Time", "Country")) |> filter(Time == 2021) |> 
 ggplot(aes(x = `GDP per capita`, y = illiterate_rate,size =rural_per, color = electricity_per)) +
-geom_point(alpha = .3) + scale_color_gradient(low = "green", high = "red") + theme_minimal(base_size = 14)
-
+geom_point(alpha = .3) + scale_color_gradient(low = "green", high = "red") + theme_minimal(base_size = 14) + facet_wrap(~GROUP)
 ```
+
+## illiteracy vs PressFreedom vs Institutions (Mosaic Plot)
+
+```{r}
+library(vcd)
+library(vcdExtra)
+
+PressFreedomIndex <- PressFreedomIndex |>
+  group_by(Time) |>
+  mutate(GROUP_press = case_when(
+    `Press Freedom Index` <= 15 ~ 1,
+    15 < `Press Freedom Index` & `Press Freedom Index` <= 25 ~ 2,
+    25 < `Press Freedom Index` & `Press Freedom Index` <= 35 ~ 3,
+    35 < `Press Freedom Index`& `Press Freedom Index` <= 55 ~ 4,
+    55 < `Press Freedom Index` ~ 5,
+    TRUE ~ NA))
+
+#Note: Good = 0–15 points; Satisfactory = 15–25; Problematic = 25–35; Difficult = 35–55; Very;serious = 55–100.
+
+institution <- institution |> group_by(Time) |> mutate(GROUP_inst = case_when(
+  `Value` <= 3 ~ 1, 
+  3 < `Value` & `Value` <= 7 ~ 2, 
+  7 < `Value` ~ 3,
+  TRUE ~ NA))
+
+inner_join(illiterate_rate,PressFreedomIndex, by = c("Time", "Country")) |> inner_join(institution, by = c("Time", "Country")) |> filter(Time == 2021) 
+```
+
+
 
